<resources>
    <string name="app_name">My Application</string>
    <string name="about_us_acercade">Acerca de...</string>
    <string name="about_us_DefiApp">Esta app es para la venta y reportes </string>
    <string name="about_us_Autores">AUTORES </string>
    <string name="about_us_1erAutor">Gonzales Espinoza Guillbert </string>
    <string name="about_us_2doAutor">  Pepa Go dady Soli </string>
</resources>
